# ldtc

./: .dockerignore  .editorconfig  .gitignore  .zenodo.json  404.html  AGENTS.md  CITATION.cff  CNAME  CONTRIBUTING.md  Dockerfile  IMPROVEMENT_PLAN.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml
.github/: CODEOWNERS
.github/workflows/: build-paper.yml  ci.yml  docs.yml  pr-lint.yml  record-public.yml
api/arbiter/: index.html
api/attest/: index.html
api/cli/: index.html
api/guardrails/: index.html
api/ldtc/: index.html
api/lmeas/: index.html
api/omega/: index.html
api/plant/: index.html
api/reporting/: index.html
api/runtime/: index.html
concepts/architecture/: index.html
concepts/definitions/: index.html
concepts/guardrails/: index.html
configs/: negative_command_conflict.yml  negative_controller_disabled.yml  negative_exogenous_soc.yml  negative_permanent_ex_flood.yml  plant_default.yml  profile_adv_hidden_tether.yml  profile_adv_oscillator.yml  profile_adv_plant_genuine.yml  profile_adv_replay_controller.yml  profile_emergence.yml  profile_negative_command_conflict.yml  profile_negative_controller_disabled.yml  profile_negative_exogenous_soc.yml  profile_negative_permanent_ex_flood.yml  profile_r0.yml  profile_rstar.example.yml
docs/: ARCHITECTURE.md  FIGURES.md  INDICATORS.md  METHODS.md  PAPER_TO_CODE.md  SMELL_TESTS.md  getting-started.md  index.md
docs/api/: arbiter.md  (+9 more)
examples/: hello_world_minimal.py  minimal_run.py
getting-started/: index.html
notebooks/: 01_verify_nc1.ipynb  02_sc1_omega.ipynb  03_partition_sanity.ipynb
paper/: Makefile  latexmkrc  macros.tex  main.tex  refs.bib
scripts/: __init__.py  _summarize_run.py  calibrate_rstar.py  emergence.py  export_indicators.py  keygen.py  run_baseline.sh  run_omega_suite.sh  sensitivity.py  study.py  study_figures.py  train_agent.py  verify_indicators.py
search/: search_index.json
tests/: test_adversarial.py  test_arbiter.py  test_attest.py  test_estimators.py  test_estimators_properties.py  test_guardrails.py  test_indicators.py  test_omega.py  test_partition.py  test_plant_hw_adapter.py  test_policy_controller.py
(+92 files in other folders)
