[project]
name = "ldtc"
version = "1.0.0"
description = "Single-machine, real-time digital boundary organism: NC1/SC1 verification harness."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Owen Carey" }]
dependencies = [
  "numpy>=1.26",
  "scikit-learn>=1.3",
  "PyYAML>=6.0",
  "cryptography>=42.0",
  "cbor2>=5.6",
  "matplotlib>=3.8",
  "statsmodels>=0.14",
  "graphviz>=0.20.3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "black>=24.0",
  "ruff>=0.4",
  "mypy>=1.10",
  "types-PyYAML>=6.0.12.20240311",
  "ipykernel>=6.29"
]
docs = [
  "mkdocs>=1.5",
  "mkdocs-material[imaging]>=9.5",
  "mkdocstrings[python]>=0.24"
]

[project.scripts]
ldtc = "ldtc.cli.main:main"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ldtc*"]

[tool.mypy]
python_version = "3.9"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true
check_untyped_defs = true
disallow_incomplete_defs = true
show_error_codes = true
pretty = true
ignore_missing_imports = true
exclude = [
    '^notebooks/',
    '^artifacts/',
    '^src/ldtc\\.egg-info/',
]
explicit_package_bases = true
packages = ["src/ldtc"]

# ── Semantic Release ────────────────────────────────────────────────

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/ldtc/__init__.py:__version__"]
commit_message = "chore(release): v{version}"
tag_format = "v{version}"
major_on_zero = false

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = [
    "^chore\\(release\\):",
]

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build", "chore", "ci", "docs", "feat", "fix",
    "perf", "refactor", "revert", "style", "test",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
